@@ -1,5 +1,13 @@
 2005-11-30  Jorn Baayen  <jorn@openedhand.com>
 
+	* libgconf-bridge/gconf-bridge.c:
+	(window_binding_perform_scheduled_sync),
+	(gconf_bridge_bind_window), (window_binding_unbind):
+
+	Generate window pref keys on demand instead of caching them.
+
+2005-11-30  Jorn Baayen  <jorn@openedhand.com>
+
 	* libgconf-bridge/gconf-bridge.c: (prop_binding_sync_prop_to_pref),
 	(prop_binding_perform_scheduled_sync), (prop_binding_prop_changed),
 	(gconf_bridge_bind_property_full), (prop_binding_unbind):
